# chat-widget-qa-task

./: README.md  api.Dockerfile  conftest.py  docker-compose.yaml  e2e.Dockerfile  pyproject.toml
api_tests/: conftest.py  endpoints.py
api_tests/core/: api_client.py  config.py
api_tests/fixtures/: chat_fixtures.py
api_tests/models/: messages.py  users.py
api_tests/tests/: test_api_chat.py  test_api_chat_send_massage.py
e2e_tests/: conftest.py
e2e_tests/data/: data.py
e2e_tests/fixtures/: open_chat_fixtures.py
e2e_tests/generator/: generator.py
e2e_tests/pages/: base_page.py  chat_page.py  open_chat_page.py  send_file_page.py  send_message_page.py  send_smile_page.py  user_identification_page.py
e2e_tests/tests/: chat_test.py  send_file_test.py  send_message_test.py  send_smile_test.py  user_identification_test.py
